css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
/* Reset */

body{
    font-family: sans-serif;
    padding-top: 100px;
}

.container-centered{
    max-width: 1140px;
    margin: 0 auto;
    padding: 0 2em;
}

.btn {
    border-radius: 25px;
    padding: .5em 1em;
    border: none;
    font-size: 1em;
    background-color: #fff;
}

.btn2 {
    border-radius: 25px;
    padding: .5em 5em;
    border: none;
    background-color: #1884FD;
    color: white;
}

.btn3 {
    border-radius: 25px;
    padding: .5em 3em;
    border: none;
    background-color: #9792E4;
    color: white;
}

.rounded{
    width: 150px;
    height: 150px;
    object-fit: cover;
    border-radius: 50%;
}


/* Assets */


/* header */
header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;

    background-color: #1884FD;
}
/* /header */

/* Nav */

nav {


    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: .5em 0;
}

nav .nav-right.desktop{
    display: none;
}

nav .nav-right.mobile .fa-solid{
    font-size: 1.5em;
    color: white;
}

/* /Nav */

/* Main */

main {
    line-height: 1.5em;
}

main .showcase{
    display: flex;
    flex-flow: wrap;
    gap: 1em;

    margin: 3em 0;
}

main .showcase .card{
    width: 100%;
    background-color: #B5DDFF;
    border-radius: 20px;

    padding: 1.5em;
    text-align: center;
}

main .showcase .card:first-child{
    display: flex;
    flex-direction: column;
    gap: 1.5em;

    padding-bottom: 0;
    text-align: left;
}

main .showcase .card .card-inner > img {
    display: block;
    width: 100%;
}

main .showcase .card h2{
    color: #1884FD;
}

main .showcase .card p{
    margin: 1.5em 0;
}

main .showcase .card .fa-solid{
    font-size: 5em;
    margin-bottom: 20px;
    color: #1884FD;
}

main .planning {
    background-color: #9792E4;
}

main .planning .planning-container{
    display: flex;
    flex-flow: row wrap;

    padding: 2em 0;
}

main .planning .planning-left > img{
    width: 100%;
    margin: 2em 0;
}

main .planning .planning-left h2, 
main .planning .planning-left p {
    color: white;
    padding-bottom: 2em;
}

main .planning .planning-right {
    background-color: white;
    border-radius: 50px;

    text-align: center;
    padding: 1.5em;
}

main .planning .planning-right > img{
    width: 100%;
    margin: 1em 0;
}

main .planning .planning-right p{
    padding: 2em 0;
    font-style: italic;
}

main .planning .planning-right .fa-arrow-down {
    padding: 1em 1.15em;
    background-color: #9792E4;
    border-radius: 50%;
}

main .testimonials {
    margin: 3em 0;
    text-align: center;
}

main .testimonials .testimonials-header{
    text-transform: uppercase;
}

main .testimonials h2{
    color: #9792E4;
    padding: 1em 0;
}

main .testimonials p {
    padding-bottom: 2em;
}

main .testimonials .testimonials-cards-container {
    display: flex;
    flex-flow: column nowrap;
    gap: 2em;
}

main .testimonials .testimonials-card {
    display: flex;
    flex-flow: column nowrap;
    gap: 1em;

    background-color: #9792E4;
    border-radius: 50px;

    padding: 1em;
    color: white;
}

main .benefit {
    background-color: #9792E4;
    padding: 4em 0;
}

main .benefit .benefit-header h2{
    font-size: 2em;
    color: white;
    text-align: center;
    line-height: 1.5em;
    padding-bottom: 2em;
}

main .benefit .benefit-card-container {
    display: flex;
    flex-flow: column nowrap;
    gap: 2em;
}

main .benefit .benefit-card{
    border-radius: 20px;
    background-color: #fff;

    padding: 2em;
}

main .benefit .benefit-card h2 {
    font-size: 3em;
}

main .benefit .benefit-card h2, 
main .benefit .benefit-card h3 {
    color: #9792E4;
    padding: .5em 0;
} 

main .benefit .benefit-card p {
    padding-bottom: 1em;
}

main .about-us {
    padding: 4em 0;
}

main .about-us-container{
    display: flex;
    flex-flow: column nowrap;
    gap: 1em;
}

main .about-us-container .about-us-left h2 {
    color: #9792E4;
    font-size: 2.5em;
}

main .about-us-container .about-us-left p{
    margin: 2em 0;
    line-height: 2em;
}

main .about-us-container .about-us-right .about-img{
    position: relative;

    display: inline-block;
}

main .about-us-container .about-us-right .about-img .fa-solid{
    position: absolute;
    top: -20px;
    right: -10px;

    font-size: 4em;
    color: #9792E4;
}

main .about-us-container .about-us-right h3{
    color: #9792E4;
    margin: 1em 0;
}

main .cta {
    background-color: #9792E4;
    padding: 4em 2em;
    color: white;
    text-align: center;
}

main .cta .cta-header {
    text-transform: uppercase;
    font-weight: 300;
}

main .cta h2{
    padding: 1em 0;
}

main .cta h1{
    padding: 1em 0;
    font-size: 3em;
    color: #FDC15F;
}

main .cta p {
    padding-bottom: 1em;
}

main .cta .btn-cta {
    border-radius: 50px;
    padding: 1em 3em;
    border: none;
    background-color: #fff;
    color: #9792E4;
    font-size: 1.2em;

    margin: 1em 0;
}

main .cta .copyright {
    font-size: .9em;
}

main .cta .copyright a,
main .cta .copyright a:visited, 
main .cta .copyright a:focus {
    color: white;
    text-decoration: underline;
}

/* /Main */


/* footer */
footer{
    background-color: #333333;
    color: white;
    padding: 2em 1em;
    text-align: center;
    font-size: .9em;
}

footer p:nth-child(2){
    padding-top: 3em;
}

footer p a,
footer p a:visited,
footer p a:focus{
    color: #9792E4;
}
/* /footer */



/*----------------------------------Responsive-----------------------------------*/

/* TABLET */
@media screen and (min-width: 768px) {

    .rounded{
        width: 200px;
        height: 200px;
    }
    

    main .showcase .card:first-child{
        width: calc(100% / 3 * 2 - (1em / 3 * 1));
    }
 
    main .showcase .card {
        width: calc(100% / 3 - (1em / 3 * 2));
    }

    main .planning .planning-left h2 {
        font-size: 3em;
    }

    main .testimonials{
        text-align: left;
    }

    main .testimonials .testimonials-card {
        flex-flow: row nowrap;
        align-items: flex-end;
    }

    main .benefit .benefit-card-container {
        flex-flow: row wrap;
    }
    
    main .benefit .benefit-card {
        width: calc(100% / 2 - (2em / 2 * 1));
    }

    main .about-us-container {
        flex-flow: row nowrap;
        gap: 2em;
    }

    main .about-us-container .about-us-left {
        padding-right: 4em;
    }

    main .cta h1 {
        font-size: 5em;
    }

    main .cta .btn-cta {
        padding: 1.5em 4em;
    }
}


/* DESKTOP */

@media screen and (min-width: 992px) {

    nav .nav-right.mobile{
        display: none;
    }

    nav .nav-right.desktop{
        display: flex;
        gap: 2em;
    }

    nav .nav-right.desktop ul {
        display: flex;
        align-items: center;
        gap: 2em;

        list-style-type: none;
    }

    nav .nav-right.desktop ul li a, 
    nav .nav-right.desktop ul li a:visited, 
    nav .nav-right.desktop ul li a:focus{
        color: #fff;
        text-decoration: none;
    }

    main .planning .planning-container {
        flex-flow: row nowrap;
        align-items: flex-end;
        gap: 3em;
    }
    
}

